# highwater-hub

./: .gitignore  Dockerfile  FANTASY_LEAGUE_IMPORT.md  FEATURE_PLANS.md  README.md  docker-compose.yml  go.mod
cmd/cli/: main.go
cmd/server/: main.go
internal/fantasy/: client.go  handler.go  model.go  postgres_store.go  store.go
internal/fitness/: handler.go  model.go  postgres_store.go  postgres_workouts.go  seed.go  store.go
internal/frontend/: frontend.go
internal/httputil/: respond.go  response.go
internal/jobs/: client.go  handler.go  inventory.go  model.go  postgres_store.go  store.go
internal/nflstats/: handler.go  model.go  postgres_game_store.go  postgres_ranking_store.go  postgres_stats_store.go  postgres_store.go  stats_handler.go  store.go
internal/server/: handle_health.go  middleware.go  routes.go  server.go
internal/user/: handler.go  (+5 more)
python-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
python-service/app/: celery_app.py  main.py  player_resolver.py
python-service/app/data_collectors/: __init__.py  base.py  espn_fantasy_collector.py  factory.py  ff_rankings_collector.py  nfl_collector.py  schedules_collector.py  stats_collector.py  yahoo_fantasy_collector.py
python-service/app/database/: __init__.py
python-service/app/models/: __init__.py  models.py
python-service/app/routes/: fantasy.py  nflstats.py
python-service/app/schemas/: __init__.py  fantasy.py  nflstats.py
python-service/app/tasks/: fantasy_import_task.py  import_task.py
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
(+36 files in other folders)
