[project]
name = "ffredux-pyservice"
version = "0.1.0"
description = "Python service for refactored ff mgr application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.4",
    "celery>=5.4.0",
    "kombu>=5.3.0",
    "nflreadpy>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
